--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         pip3 install --upgrade pip wheel
         python3 -m pip install pyinstaller
         python3 -m pip install -r requirements.txt
-        python3 -O -m PyInstaller DIP.spec
+        python3 -O -m pyinstaller DIP.spec
       
     - name: Log files
       run: |
