--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Cache Python download
+      id: cache-python-download
+      uses: actions/cache@v3
+      with:
+        path: ~/python.pkg
+        key: macOS-Python-${{ env.PYTHON_VERSION }}
+
     - name: Get Python
       run: |
        curl https://www.python.org/ftp/python/${PYTHONVERSION}/python-${PYTHONVERSION}-macos11.pkg -o ~/python.pkg
