--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         python3 --version
         pip3 install --upgrade pip wheel
         pip3 install pyinstaller
-        python3 -O -m PInstaller DIP.spec
+        python3 -O -m PyInstaller DIP.spec
       
     - name: Log files
       run: |
