--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
-        repo_token: ${{ secrets.TOKEN }}
+        # repo_token: ${{ secrets.TOKEN }}
         file: DIP.dmg
         asset_name: DIP.dmg
         tag: latest-mac-build
