--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and package the Mac version
+name: Build and package python apps
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       main
 
 jobs:
-  build-app:
+  build-mac:
     name: Build for Mac
     runs-on: macos-latest
     env:
@@ -52,4 +52,34 @@ jobs:
         file: DIP.dmg
         asset_name: DIP.dmg
         tag: latest-mac-build
+        overwrite: true
+        
+  build-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install requirements
+      run: |
+        pip3 install pyinstaller
+        pip3 install -r requirements.txt
+        pip3 install pillow
+        sudo apt install python3-tk python3-pil.imagetk
+
+    - name: Build
+      run: pyinstaller DIP.spec
+      
+    - name: Log files
+      run: |
+        ls dist
+        ls dist/DIP
+        cd dist; zip -0 -r -y DIP.zip DIP
+
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        file: dist/DIP.zip
+        asset_name: DIP.zip
+        tag: latest-linux-build
         overwrite: true
