--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,4 +90,6 @@ jobs:
     - name: Install Requirements
       run: |
        python3 --version
-       pip
+        pip install --upgrade pip wheel
+        pip install pyinstaller
+        python3 -O -m PyInstaller DIP.spec
