--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,3 +98,11 @@ jobs:
       run: |
         ls dist
         ls dist/DIP
+
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
+      with:
+        file: dist/DIP.exe
+        asset_name: DIP.exe
+        tag: latest-windows-build
+        overwrite: true
