--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,7 +102,7 @@ jobs:
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
-        file: dist/DIP.exe
+        file: dist/DIP/DIP.exe
         asset_name: DIP.exe
         tag: latest-windows-build
         overwrite: true
