--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         python3 --version
         pip3 install --upgrade pip wheel
         pip3 install pyinstaller
-        python3 -O -m PyInstaller DIP.spec
+        python3 -O -m PyInstaller -W DIP.spec
       
     - name: Log files
       run: |
@@ -92,7 +92,7 @@ jobs:
         python3 --version
         pip install --upgrade pip wheel
         pip install pyinstaller
-        python3 -O -m PyInstaller -F DIP.spec
+        python3 -O -m PyInstaller -W DIP.spec
       
     - name: Log files
       run: |
