--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,7 @@ jobs:
     - name: Log files
       run: |
         ls dist
+        ls dist/DIP
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
