--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ jobs:
     env:
       PYTHONVERSION: "3.11.1"
       MACOSX_DEPLOYMENT_TARGET: "10.9"
+      PYI_BUILD_MODE = "onedir"
 
     steps:
     - uses: actions/checkout@v2
@@ -55,6 +56,8 @@ jobs:
         
   build-linux:
     runs-on: ubuntu-latest
+    env:
+      PYI_BUILD_MODE = "onedir"
 
     steps:
     - uses: actions/checkout@v2
@@ -83,6 +86,8 @@ jobs:
   
   build-windows:
     runs-on: windows-latest
+    env:
+      PYI_BUILD_MODE = "onefile"
     
     steps:
     - uses: actions/checkout@v2
