--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,8 @@ jobs:
       
     - name: Log files
       run: |
+        ls
+        echo "_"
         ls dist
 
     - name: Upload binaries to release
