--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,7 @@ jobs:
       run: |
         ls
         echo "_"
-        ls dist
+        ls dist -R
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
