--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,9 +101,7 @@ jobs:
       
     - name: Log files
       run: |
-        ls
-        echo "_"
-        ls -R
+        ls dist
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
