--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,6 @@ jobs:
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
-        # repo_token: ${{ secrets.TOKEN }}
         file: DIP.dmg
         asset_name: DIP.dmg
         tag: latest-mac-build
@@ -57,7 +56,7 @@ jobs:
   build-linux:
     runs-on: ubuntu-latest
     env:
-      PYI_BUILD_MODE: "onedir"
+      PYI_BUILD_MODE: "onefile"
 
     steps:
     - uses: actions/checkout@v2
@@ -73,14 +72,14 @@ jobs:
     - name: Log files
       run: |
         ls dist
-        ls dist/DIP
-        cd dist; zip -0 -r -y DIP.zip DIP
+        # ls dist/DIP
+        # cd dist; zip -0 -r -y DIP.zip DIP
 
     - name: Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
-        file: dist/DIP.zip
-        asset_name: DIP.zip
+        file: dist/DIP
+        asset_name: DIP
         tag: latest-linux-build
         overwrite: true
   
